# oreilly-live-training-pyats

./: .env.example  .gitignore  LICENSE  README.md  load_env_vars.sh  pyproject.toml  requirements.txt
.github/workflows/: network-ci.yml
01-pyats-testscripts/: README.md  basic_jobfile.py  basic_testscript.py  datafile.yml
02-exploring-genie/: README.md  blitz.yml
02-exploring-genie/full_capture/: arp_iosxe_cat8000v_ops.txt  device_iosxe_cat8000v_console.txt  fdb_iosxe_cat8000v_ops.txt  hsrp_iosxe_cat8000v_console.txt  lldp_iosxe_cat8000v_console.txt  management_iosxe_cat8000v_exception.txt  management_iosxe_cat8000v_ops.txt  msdp_iosxe_cat8000v_console.txt  ntp_iosxe_cat8000v_console.txt  ospf_iosxe_cat8000v_console.txt  routing_iosxe_cat8000v_ops.txt  terminal_iosxe_cat8000v_ops.txt
02-exploring-genie/full_capture2/: connection_cat8000v.txt  dot1x_iosxe_cat8000v_console.txt  igmp_iosxe_cat8000v_console.txt  interface_iosxe_cat8000v_ops.txt  mld_iosxe_cat8000v_console.txt  nd_iosxe_cat8000v_console.txt  ntp_iosxe_cat8000v_console.txt  platform_iosxe_cat8000v_console.txt  prefix_list_iosxe_cat8000v_console.txt  routing_iosxe_cat8000v_console.txt  terminal_iosxe_cat8000v_console.txt  vlan_iosxe_cat8000v_console.txt  vrf_iosxe_cat8000v_console.txt
02-exploring-genie/full_capture_diff/: diff_interface_iosxe_cat8000v_ops.txt  diff_routing_iosxe_cat8000v_ops.txt  diff_terminal_iosxe_cat8000v_ops.txt
jul-25/02-exploring-genie/: README.md  testbed.yml
jul-25/03-cicd-pipelines/: README.md
nov-25/01-pyats-testscripts/: README.md
(+260 files in other folders)
